--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ before_deploy:
 deploy:
   skip_cleanup: true
   provider: releases
-  api_key: $GITHUB_KEY
+  api_key:
+      secure: $SECURE_GITHUB_KEY
   file: "chatterino2.dmg"
   prerelease: true
   on:
